# musicd

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  build.sh
.github/workflows/: build.yml
docs/: architecture.md  protocol.md
include/musicd/: audio_output_manager.h  ipc_server.h  music_daemon.h  playback_engine.h  queue_manager.h  types.h
src/: audio_output_manager.cpp  ipc_server.cpp  main.cpp  music_daemon.cpp  musicctl.cpp  playback_engine.cpp  queue_manager.cpp
